<resources>
    <string name="device_admin_description">Allow AlwaysOn to turn off your screen</string>
    <string name="notification_listener_description">Show notifications on the always on display</string>
    <string name="service_text">AlwaysOn is running in the background</string>
    <string name="service_channel">Service channel</string>
    <string name="setup_root_failed">Root request failed! Please try again or switch mode!</string>
    <string name="device_admin">Device Admin</string>
    <string name="device_admin_summary">You need to activate this device admin or switch to root mode for this app to work.</string>
    <string name="notification_listener_service">Notification Access</string>
    <string name="notification_listener_service_summary">You need to enable notification access for the app to display your notifications on the always on display.</string>
    <string name="setup_draw_over_other_apps">Display over other apps</string>
    <string name="setup_draw_over_other_apps_summary">This permission is required to show the always on display.</string>
    <string name="setup_phone_state">Read phone state</string>
    <string name="setup_phone_state_summary">This permission is required to stop the always on display for incoming calls.</string>
    <string name="setup_calendar">Read calendar</string>
    <string name="setup_calendar_summary">You need to enable calendar access for the app to display your events on the always on display.</string>
    <string name="setup_skip">Skip</string>
    <string name="setup_continue">Continue</string>
    <string name="setup_error">Something went wrong! Please try again!</string>
    <string name="dialog_device_admin_text">Please note that you have to deactivate the app\’s device admin privileges before uninstalling it! To make sure you understood this please perform the following operation:\n7 + 12</string>
    <string name="dialog_device_admin_result">Result</string>
    <string name="dialog_device_admin_error">Wrong result. Try again.</string>
    <string name="app_name" translatable="false">AlwaysOn</string>
    <string name="app_description">Android app which adds an always on display</string>
    <string name="pref_general">General settings</string>
    <string name="pref_enabled">Currently enabled</string>
    <string name="pref_disabled">Currently disabled</string>
    <string name="pref_always_on">Always on display</string>
    <string name="pref_charging">Charging animation</string>
    <string name="pref_look_and_feel">Look and feel</string>
    <string name="pref_ao_watch_face">Watch face</string>
    <string name="pref_ao_watch_face_summary">Settings related to the watch face of the AOD</string>
    <string name="pref_ao_background">Background</string>
    <string name="pref_ao_background_summary">Settings related to the background of the AOD</string>
    <string name="pref_ao_behavior">Behavior</string>
    <string name="pref_ao_behavior_summary">Settings related to the behavior of the app</string>
    <string name="pref_ao_other">Other settings</string>
    <string name="pref_look_and_feel_colors_clock">Clock color</string>
    <string name="pref_look_and_feel_colors_date">Date color</string>
    <string name="pref_look_and_feel_colors_battery">Battery color</string>
    <string name="pref_look_and_feel_colors_music_controls">Music controls color</string>
    <string name="pref_look_and_feel_colors_calendar">Calendar event color</string>
    <string name="pref_look_and_feel_colors_message">Message color</string>
    <string name="pref_look_and_feel_colors_weather">Weather color</string>
    <string name="pref_look_and_feel_colors_notification">Notification color</string>
    <string name="pref_look_and_feel_colors_fingerprint">Fingerprint icon color</string>
    <string name="pref_ao_edgeGlow">Edge glow</string>
    <string name="pref_ao_edgeGlow_summary">Glowing edges when a notification is received</string>
    <string name="pref_ao_glowDuration">Glowing duration (in milliseconds)</string>
    <string name="pref_ao_glowDuration_summary">Duration the edges are glowing</string>
    <string name="pref_ao_glowDelay">Glowing delay (in milliseconds)</string>
    <string name="pref_ao_glowDelay_summary">Interval between the glows</string>
    <string name="pref_ao_glowStyle">Edge glow style</string>
    <string name="pref_ao_glowStyle_summary">Changes the look of the glowing edges</string>
    <string name="pref_ao_glowColor">Edge glow color</string>
    <string name="pref_ao_glowColor_summary">Changes the color of the glowing edges</string>
    <string name="pref_ao_vibration">Vibration duration (in milliseconds)</string>
    <string name="pref_ao_vibration_summary">Duration the phone vibrates when you double-tap the screen</string>
    <string name="pref_ao_animation_delay">Movement delay (in minutes)</string>
    <string name="pref_ao_animation_delay_summary">Time between the different positions of the content\nWarning: Too high values can cause screen burn-ins!</string>
    <string name="pref_ao_smooth_animation">Animate motion</string>
    <string name="pref_ao_smooth_animation_summary">Animate the position changes</string>
    <string name="pref_ao_force_brightness">Force a certain brightness on the AOD</string>
    <string name="pref_ao_force_brightness_summary">Tap to change the forced brightness</string>
    <string name="pref_ao_pocket_mode">Pocket mode</string>
    <string name="pref_ao_pocket_mode_summary">Disables the always on display in your pocket\nWarning: Sensor usage may cause increased battery usage!</string>
    <string name="pref_ao_dnd">Turn on Do Not Disturb</string>
    <string name="pref_ao_dnd_summary">Turns on Do Not Disturb mode while the always on display is running</string>
    <string name="pref_ao_power_saving">Power saving mode (root)</string>
    <string name="pref_ao_power_saving_summary">Turns on the system\’s power saver mode when the always on display is enabled</string>
    <string name="pref_ao_double_tap_speed">Double-tap speed</string>
    <string name="pref_ao_double_tap_speed_summary">The time two taps can be apart (in milliseconds)</string>
    <string name="pref_ao_double_tap_disabled">Disable double-tap</string>
    <string name="pref_ao_double_tap_disabled_summary">Disables double-tap to exit the AOD (not recommended)</string>
    <string name="pref_look_and_feel_charging">Charging animation look</string>
    <string name="pref_look_and_feel_charging_summary">Changes the look of the charging animation</string>
    <string name="pref_ao_background_image">Background image</string>
    <string name="pref_ao_background_image_summary">Change the background image of the AOD</string>
    <string name="pref_look_and_feel_hide_display_cutouts">Hide display cutouts</string>
    <string name="pref_look_and_feel_hide_display_cutouts_summary">Hide display cutouts on fullscreen content</string>
    <string name="pref_look_and_feel_orientation">Orientation</string>
    <string name="pref_look_and_feel_orientation_summary">Changes the display\’s orientation</string>
    <string name="pref_look_and_feel_heads_up">Hide heads up notifications (root)</string>
    <string name="pref_look_and_feel_heads_up_summary">Prevents the heads up notifications from showing (experimental)</string>
    <string name="pref_look_and_feel_weather">Weather</string>
    <string name="pref_look_and_feel_weather_info">Show weather info</string>
    <string name="pref_look_and_feel_weather_show_summary">Show weather info on your AOD</string>
    <string name="pref_look_and_feel_weather_provider">AlwaysOn uses wtrr.in for weather data. Fetching the weather may transfer identifiable data.</string>
    <string name="pref_look_and_feel_weather_location">Weather location</string>
    <string name="pref_look_and_feel_weather_location_summary">The location for the weather report. Leave this empty for auto-location.</string>
    <string name="pref_look_and_feel_weather_format">Weather format</string>
    <string name="pref_look_and_feel_weather_format_summary">The weather format used on the AOD</string>
    <string name="pref_look_and_feel_filter_notifications_explanation">Tap on the entries to block or unblock them</string>
    <string name="pref_look_and_feel_filter_notifications_blocked">Block notifications from</string>
    <string name="pref_look_and_feel_filter_notifications_shown">Notifications available from</string>
    <string name="pref_look_and_feel_filter_notifications_empty">No notifications available</string>
    <string name="pref_look_and_feel_filter_notifications_empty_summary">It seems that there is nothing to show</string>
    <string name="pref_look_and_feel_rules">Rules</string>
    <string name="pref_look_and_feel_rules_summary">Control when to show the AOD</string>
    <string name="pref_look_and_feel_rules_charging_state">Charging state</string>
    <string name="pref_look_and_feel_rules_charger">Charging type</string>
    <string name="pref_look_and_feel_rules_charger_summary">Choose which charging types count as charging</string>
    <string name="pref_look_and_feel_rules_battery_level">Battery level</string>
    <string name="pref_look_and_feel_rules_time">Time period</string>
    <string name="pref_look_and_feel_rules_timeout">Timeout</string>
    <string name="pref_look_and_feel_rules_ambient_mode">Ambient mode</string>
    <string name="pref_look_and_feel_rules_ambient_mode_summary">Only show after a notification was received</string>
    <string name="pref_permissions">Permissions</string>
    <string name="pref_permissions_summary">Settings related to permissions</string>
    <string name="pref_ignore_battery_optimizations">Ignore battery optimizations</string>
    <string name="pref_ignore_battery_optimizations_summary">Prevents delays caused by the system</string>
    <string name="pref_notification">Notification access</string>
    <string name="pref_notification_summary">Enable or disable notification access</string>
    <string name="pref_draw_over_other_apps">Display over other apps</string>
    <string name="pref_draw_over_other_apps_summary">Enable or disable this permission</string>
    <string name="pref_admin">Device admin</string>
    <string name="pref_admin_summary">Activate this device admin for normal mode\nPlease note that you have to deactivate the app\’s device admin privileges before uninstalling it!</string>
    <string name="pref_root_mode">Root mode</string>
    <string name="pref_root_mode_summary">Enables root functionality</string>
    <string name="help_center">Help center</string>
    <string name="help_center_summary">Uninstalling, unresponsiveness, battery drain</string>
    <string name="loading">Loading</string>
    <string name="about">About</string>
    <string name="about_summary">About the app</string>
    <string name="about_app_version">App version</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_contributors_desc">A list of the contributors</string>
    <string name="about_general">General</string>
    <string name="about_github">GitHub repository</string>
    <string name="about_license">License</string>
    <string name="about_license_desc" translatable="false">GPL-3.0</string>
    <string name="about_icons">Icons</string>
    <string name="about_icons_desc">Icons by Icons8 and Google</string>
    <string-array name="about_libraries" translatable="false">
        <item>Android Preferences KTX</item>
        <item>AppCompat</item>
        <item>ColorPicker</item>
        <item>Material Components For Android</item>
        <item>Volley</item>
    </string-array>
    <string name="about_libraries_desc">A list of all used libraries</string>
    <string name="pref_look_and_feel_weather_unit_summary">Display temperature in metric units. Disable for Fahrenheit.</string>
    <string name="pref_look_and_feel_weather_unit">Use celsius</string>
</resources>