<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_general">

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_always_on"
            android:key="always_on"
            android:summaryOff="@string/pref_disabled"
            android:summaryOn="@string/pref_enabled"
            android:title="@string/pref_always_on" />
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_charging"
            android:key="charging_animation"
            android:summaryOff="@string/pref_disabled"
            android:summaryOn="@string/pref_enabled"
            android:title="@string/pref_charging" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_look_and_feel">

        <Preference
            android:icon="@drawable/ic_clock"
            android:key="pref_watch_face"
            android:summary="@string/pref_ao_watch_face_summary"
            android:title="@string/pref_ao_watch_face" />
        <Preference
            android:icon="@drawable/ic_smartphone"
            android:key="pref_background"
            android:summary="@string/pref_ao_background_summary"
            android:title="@string/pref_ao_background" />
        <Preference
            android:icon="@drawable/ic_build"
            android:key="rules"
            android:summary="@string/pref_look_and_feel_rules_summary"
            android:title="@string/pref_look_and_feel_rules" />
        <Preference
            android:icon="@drawable/ic_speed"
            android:key="pref_behavior"
            android:summary="@string/pref_ao_behavior_summary"
            android:title="@string/pref_ao_behavior" />
        <Preference
            android:icon="@drawable/ic_charging"
            android:key="charging_style"
            android:summary="@string/pref_look_and_feel_charging_summary"
            android:title="@string/pref_look_and_feel_charging" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_ao_other" >
        <Preference
            android:icon="@drawable/ic_security"
            android:key="pref_permissions"
            android:summary="@string/pref_permissions_summary"
            android:title="@string/pref_permissions" />
        <Preference
            android:icon="@drawable/ic_help"
            android:key="pref_help"
            android:summary="@string/help_center_summary"
            android:title="@string/help_center" />
        <Preference
            android:icon="@drawable/ic_info"
            android:key="pref_about"
            android:summary="@string/about_summary"
            android:title="@string/about" />
    </PreferenceCategory>

</PreferenceScreen>
