<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="locked"
        android:entries="@array/pref_look_and_feel_orientation_display"
        android:entryValues="@array/pref_look_and_feel_orientation_values"
        android:icon="@drawable/ic_orientation"
        android:key="orientation"
        android:summary="@string/pref_look_and_feel_orientation_summary"
        android:title="@string/pref_look_and_feel_orientation" />
    <io.github.hsushjk.alwayson.custom.EditIntegerPreference
        android:defaultValue="64"
        android:icon="@drawable/ic_vibration"
        android:key="ao_vibration"
        android:summary="@string/pref_ao_vibration_summary"
        android:title="@string/pref_ao_vibration" />
    <io.github.hsushjk.alwayson.custom.EditIntegerPreference
        android:defaultValue="2"
        android:icon="@drawable/ic_speed"
        android:key="ao_animation_delay"
        android:summary="@string/pref_ao_animation_delay_summary"
        android:title="@string/pref_ao_animation_delay" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_speed"
        android:key="ao_smooth_animation"
        android:summary="@string/pref_ao_smooth_animation_summary"
        android:title="@string/pref_ao_smooth_animation" />
    <Preference
        android:icon="@drawable/ic_brightness"
        android:key="ao_force_brightness"
        android:summary="@string/pref_ao_force_brightness_summary"
        android:title="@string/pref_ao_force_brightness" />
    <io.github.hsushjk.alwayson.custom.EditIntegerPreference
        android:defaultValue="300"
        android:icon="@drawable/ic_touch_app"
        android:key="ao_double_tap_speed"
        android:summary="@string/pref_ao_double_tap_speed_summary"
        android:title="@string/pref_ao_double_tap_speed" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_touch_app"
        android:key="ao_double_tap_disabled"
        android:summary="@string/pref_ao_double_tap_disabled_summary"
        android:title="@string/pref_ao_double_tap_disabled" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_do_not_touch"
        android:key="ao_pocket_mode"
        android:summary="@string/pref_ao_pocket_mode_summary"
        android:title="@string/pref_ao_pocket_mode" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_dnd"
        android:key="ao_dnd"
        android:summary="@string/pref_ao_dnd_summary"
        android:title="@string/pref_ao_dnd" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_battery"
        android:key="ao_power_saving"
        android:summary="@string/pref_ao_power_saving_summary"
        android:title="@string/pref_ao_power_saving" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_notification"
        android:key="heads_up"
        android:summary="@string/pref_look_and_feel_heads_up_summary"
        android:title="@string/pref_look_and_feel_heads_up" />

</PreferenceScreen>
