<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/ic_image"
        android:key="ao_background_image"
        android:summary="@string/pref_ao_background_image_summary"
        android:title="@string/pref_ao_background_image" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_smartphone"
        android:key="hide_display_cutouts"
        android:summary="@string/pref_look_and_feel_hide_display_cutouts_summary"
        android:title="@string/pref_look_and_feel_hide_display_cutouts" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_portrait"
        android:key="ao_edgeGlow"
        android:summary="@string/pref_ao_edgeGlow_summary"
        android:title="@string/pref_ao_edgeGlow" />
    <io.github.domi04151309.alwayson.custom.EditIntegerPreference
        android:defaultValue="2000"
        android:icon="@drawable/ic_timer"
        android:key="ao_glowDuration"
        android:summary="@string/pref_ao_glowDuration_summary"
        android:title="@string/pref_ao_glowDuration" />
    <io.github.domi04151309.alwayson.custom.EditIntegerPreference
        android:defaultValue="4000"
        android:icon="@drawable/ic_timer"
        android:key="ao_glowDelay"
        android:summary="@string/pref_ao_glowDelay_summary"
        android:title="@string/pref_ao_glowDelay" />
    <ListPreference
        android:defaultValue="all"
        android:entries="@array/pref_ao_glowStyle_display"
        android:entryValues="@array/pref_ao_glowStyle_values"
        android:icon="@drawable/ic_palette"
        android:key="ao_glowStyle"
        android:summary="@string/pref_ao_glowStyle_summary"
        android:title="@string/pref_ao_glowStyle" />
    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
        android:defaultValue="0xffffffff"
        android:icon="@drawable/ic_palette"
        android:key="display_color_edge_glow"
        android:summary="@string/pref_ao_glowColor_summary"
        android:title="@string/pref_ao_glowColor"
        app:cpv_showAlphaSlider="true"
        app:cpv_showColorShades="false" />

</PreferenceScreen>
