<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/ic_info"
        android:summary="@string/pref_look_and_feel_weather_provider" />

    <PreferenceCategory
        android:title="@string/pref_look_and_feel_weather">

        <SwitchPreference
            android:defaultValue="false"
            android:key="ao_weather"
            android:icon="@drawable/ic_cloud"
            android:summary="@string/pref_look_and_feel_weather_show_summary"
            android:title="@string/pref_look_and_feel_weather_info" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_look_and_feel">

        <EditTextPreference
            android:defaultValue=""
            android:key="ao_weather_location"
            android:icon="@drawable/ic_location"
            android:summary="@string/pref_look_and_feel_weather_location_summary"
            android:title="@string/pref_look_and_feel_weather_location" />

        <Preference
            android:defaultValue="%t"
            android:key="ao_weather_format"
            android:icon="@drawable/ic_short_text"
            android:summary="@string/pref_look_and_feel_weather_format_summary"
            android:title="@string/pref_look_and_feel_weather_format" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="ao_weather_metric"
            android:icon="@drawable/ic_location"
            android:summary="@string/pref_look_and_feel_weather_unit_summary"
            android:title="@string/pref_look_and_feel_weather_unit"/>
    </PreferenceCategory>
</PreferenceScreen>