<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/ic_battery"
        android:key="ignore_battery_optimizations"
        android:summary="@string/pref_ignore_battery_optimizations_summary"
        android:title="@string/pref_ignore_battery_optimizations" />
    <Preference
        android:icon="@drawable/ic_notification"
        android:summary="@string/pref_notification_summary"
        android:title="@string/pref_notification">
        <!--suppress AndroidDomInspection -->
        <intent
            android:targetClass="com.android.settings.Settings$NotificationAccessSettingsActivity"
            android:targetPackage="com.android.settings" />
    </Preference>
    <Preference
        android:icon="@drawable/ic_brush"
        android:summary="@string/pref_draw_over_other_apps_summary"
        android:title="@string/pref_draw_over_other_apps">
        <!--suppress AndroidDomInspection -->
        <intent
            android:targetClass="com.android.settings.Settings$OverlaySettingsActivity"
            android:targetPackage="com.android.settings" />
    </Preference>
    <Preference
        android:icon="@drawable/ic_security"
        android:key="device_admin"
        android:summary="@string/pref_admin_summary"
        android:title="@string/pref_admin" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_hashtag"
        android:key="root_mode"
        android:summary="@string/pref_root_mode_summary"
        android:title="@string/pref_root_mode" />
</PreferenceScreen>