<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_general">

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_always_on"
            android:key="always_on"
            android:summaryOff="@string/pref_disabled"
            android:summaryOn="@string/pref_enabled"
            android:title="@string/pref_always_on" />
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_edge"
            android:key="edge_display"
            android:summaryOff="@string/pref_disabled"
            android:summaryOn="@string/pref_enabled"
            android:title="@string/pref_edge_display" />
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_headset"
            android:key="headphone_animation"
            android:summaryOff="@string/pref_disabled"
            android:summaryOn="@string/pref_enabled"
            android:title="@string/pref_headphones" />
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_charging"
            android:key="charging_animation"
            android:summaryOff="@string/pref_disabled"
            android:summaryOn="@string/pref_enabled"
            android:title="@string/pref_charging" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_categories" >
        <Preference
            android:icon="@drawable/ic_palette"
            android:key="pref_look_and_feel"
            android:summary="@string/pref_look_and_feel_summary"
            android:title="@string/pref_look_and_feel" />
        <Preference
            android:icon="@drawable/ic_security"
            android:key="pref_permissions"
            android:summary="@string/pref_permissions_summary"
            android:title="@string/pref_permissions" />
        <Preference
            android:icon="@drawable/ic_info"
            android:key="pref_about"
            android:summary="@string/about_summary"
            android:title="@string/about" />
    </PreferenceCategory>

</PreferenceScreen>
