<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_notification"
        android:key="rules_ambient_mode"
        android:summary="@string/pref_look_and_feel_rules_ambient_mode_summary"
        android:title="@string/pref_look_and_feel_rules_ambient_mode" />

    <ListPreference
        android:defaultValue="always"
        android:entries="@array/pref_look_and_feel_rules_charging_state_display"
        android:entryValues="@array/pref_look_and_feel_rules_charging_state_values"
        android:icon="@drawable/ic_battery"
        android:key="rules_charging_state"
        android:summary="%s"
        android:title="@string/pref_look_and_feel_rules_charging_state" />

    <MultiSelectListPreference
        android:defaultValue="@array/pref_look_and_feel_rules_charger_values"
        android:entries="@array/pref_look_and_feel_rules_charger_display"
        android:entryValues="@array/pref_look_and_feel_rules_charger_values"
        android:icon="@drawable/ic_battery"
        android:key="rules_charger_type"
        android:summary="@string/pref_look_and_feel_rules_charger_summary"
        android:title="@string/pref_look_and_feel_rules_charger" />

    <io.github.domi04151309.alwayson.custom.EditIntegerPreference
        android:defaultValue="0"
        android:icon="@drawable/ic_percent"
        android:key="rules_battery_level"
        android:summary="@string/loading"
        android:title="@string/pref_look_and_feel_rules_battery_level" />

    <Preference
        android:icon="@drawable/ic_clock"
        android:key="rules_time"
        android:summary="@string/loading"
        android:title="@string/pref_look_and_feel_rules_time" />

    <io.github.domi04151309.alwayson.custom.EditIntegerPreference
        android:defaultValue="0"
        android:icon="@drawable/ic_timer"
        android:key="rules_timeout_sec"
        android:summary="@string/loading"
        android:title="@string/pref_look_and_feel_rules_timeout" />
</PreferenceScreen>